[package]
name = "CompanionApp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
uuid = {version = "1.2.2", features = ["macro-diagnostics"]}
rand = "0.8.5"
btleplug = { version = "0.10", features = ["serde"] }
axum = "*"
